--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -8,10 +8,28 @@
 "About Elements" = "Über Elements";
 
 /* No comment provided by engineer. */
+"Accounts" = "Accounts";
+
+/* No comment provided by engineer. */
+"Add Account" = "Add Account";
+
+/* No comment provided by engineer. */
+"Add Account..." = "Add Account...";
+
+/* No comment provided by engineer. */
 "add file" = "Neues Dokument";
 
 /* No comment provided by engineer. */
 "add folder" = "Neuer Ordner";
+
+/* No comment provided by engineer. */
+"An unknown error occurred" = "An unknown error occurred";
+
+/* No comment provided by engineer. */
+"appearance" = "appearance";
+
+/* No comment provided by engineer. */
+"Appearance" = "Appearance";
 
 /* No comment provided by engineer. */
 "Are you sure you want to clear your scratchpad?" = "Sind Sie sicher, dass Sie den Notizblock löschen wollen?";
@@ -23,10 +41,10 @@
 "As Attachment" = "Als Anhang";
 
 /* No comment provided by engineer. */
-"Authorization Failed" = "Anmeldung fehlgeschlagen";
+"As HTML Email" = "As HTML Email";
 
 /* No comment provided by engineer. */
-"Background Color" = "Hintergrundfarbe";
+"Authorization Failed" = "Anmeldung fehlgeschlagen";
 
 /* No comment provided by engineer. */
 "Can't Send Mail" = "Die E-Mail kann nicht gesendet werden";
@@ -56,10 +74,16 @@
 "Contact Us" = "Kontaktieren Sie uns";
 
 /* No comment provided by engineer. */
+"Could not sign in to Tumblr. Please check your email and password." = "Could not sign in to Tumblr. Please check your email and password.";
+
+/* No comment provided by engineer. */
 "Couldn't Delete File" = "Dokument konnte nicht gelöscht werden";
 
 /* No comment provided by engineer. */
 "Create A Dropbox Account" = "Dropbox Account anlegen";
+
+/* No comment provided by engineer. */
+"Creating /Elements folder" = "Creating /Elements folder";
 
 /* No comment provided by engineer. */
 "Creating Your Dropbox Account" = "Dropbox Account wird angelegt";
@@ -71,7 +95,7 @@
 "Debugging" = "Debug";
 
 /* No comment provided by engineer. */
-"Default Extension" = "Default Extension";
+"Default Extension" = "Standard Dateierweiterung";
 
 /* No comment provided by engineer. */
 "Define" = "Definieren";
@@ -83,10 +107,13 @@
 "Done" = "Fertig";
 
 /* No comment provided by engineer. */
+"Dropbox" = "Dropbox";
+
+/* No comment provided by engineer. */
 "Dropbox account" = "Dropbox Account";
 
 /* No comment provided by engineer. */
-"Dropbox Login" = "Dropbox Anmeldung";
+"Dropbox Sync" = "Dropbox Sync";
 
 /* No comment provided by engineer. */
 "Edit" = "Bearbeiten";
@@ -128,13 +155,34 @@
 "Error Creating Local Folder" = "Fehler beim Erstellen eines lokalen Ordners";
 
 /* No comment provided by engineer. */
+"Error Logging In" = "Error Logging In";
+
+/* No comment provided by engineer. */
 "Error Opening File" = "Fehler beim Öffnen des Dokuments";
 
 /* No comment provided by engineer. */
-"Error parsing Dropbox metadata json." = "Error parsing Dropbox metadata json.";
+"Error parsing Dropbox metadata json." = "Fehler beim einlesen der Dropbox json Metadaten";
 
 /* No comment provided by engineer. */
 "Error Saving Local Changes" = "Fehler beim Sichern lokaler Daten";
+
+/* No comment provided by engineer. */
+"Evernote" = "Evernote";
+
+/* No comment provided by engineer. */
+"Evernote Sign In" = "Evernote Sign In";
+
+/* No comment provided by engineer. */
+"Export" = "Export";
+
+/* No comment provided by engineer. */
+"Exported to iTunes" = "Exported to iTunes";
+
+/* No comment provided by engineer. */
+"Exporting To Dropbox" = "Exporting To Dropbox";
+
+/* No comment provided by engineer. */
+"Exporting to Evernote..." = "Exporting to Evernote...";
 
 /* No comment provided by engineer. */
 "Facebook" = "Facebook";
@@ -167,7 +215,19 @@
 "How do you want to email this file?" = "Wie soll das Dokument versendet werden?";
 
 /* No comment provided by engineer. */
+"HTML File" = "HTML File";
+
+/* No comment provided by engineer. */
+"http://example.com" = "http://example.com";
+
+/* No comment provided by engineer. */
 "Inline" = "In der E-Mail";
+
+/* No comment provided by engineer. */
+"Its notebook is not yours." = "Its notebook is not yours.";
+
+/* No comment provided by engineer. */
+"iTunes" = "iTunes";
 
 /* No comment provided by engineer. */
 "Last Modified" = "Zuletzt geändert";
@@ -188,10 +248,13 @@
 "Linked Folder" = "Verknüpfter Ordner";
 
 /* No comment provided by engineer. */
-"Loading..." = "Laden …";
+"Loading..." = "Lädt …";
 
 /* No comment provided by engineer. */
-"Login" = "Anmelden";
+"Login Failed" = "Login Failed";
+
+/* No comment provided by engineer. */
+"Login failed because of an error communicating with the Evernote servers.  Please try again later." = "Login failed because of an error communicating with the Evernote servers.  Please try again later.";
 
 /* No comment provided by engineer. */
 "Logout" = "Abmelden";
@@ -203,10 +266,10 @@
 "Metadata Refresh Error" = "Fehler beim Aktualisieren der Metadaten";
 
 /* No comment provided by engineer. */
-"Modified ↑" = "Modified ↑";
+"Modified ↑" = "Geändert ↑";
 
 /* No comment provided by engineer. */
-"Modified ↓" = "Modified ↓";
+"Modified ↓" = "Geändert ↓";
 
 /* No comment provided by engineer. */
 "Name ↑" = "Name ↑";
@@ -230,7 +293,13 @@
 "No Internet Connection Detected." = "Keine Internetverbindung.";
 
 /* No comment provided by engineer. */
+"Notebooks" = "Notebooks";
+
+/* No comment provided by engineer. */
 "OK" = "OK";
+
+/* No comment provided by engineer. */
+"Operation would exceed monthly upload allowance." = "Operation would exceed monthly upload allowance.";
 
 /* No comment provided by engineer. */
 "Our Other Apps" = "Unsere anderen Apps";
@@ -239,7 +308,22 @@
 "Password" = "Passwort";
 
 /* No comment provided by engineer. */
+"PDF File" = "PDF File";
+
+/* No comment provided by engineer. */
+"Posting To Facebook..." = "Posting To Facebook...";
+
+/* No comment provided by engineer. */
+"Posting To Tumblr..." = "Posting To Tumblr...";
+
+/* No comment provided by engineer. */
 "Print" = "Drucken";
+
+/* No comment provided by engineer. */
+"Publish" = "Publish";
+
+/* No comment provided by engineer. */
+"Published!" = "Published!";
 
 /* No comment provided by engineer. */
 "Receive infrequent updates on Elements updates and other Second Gear apps. You can unsubscribe at anytime." = "Erhalten Sie regelmäßige Neuigkeiten über Elements und andere Second Gear Anwendungen. Sie können Ihr Abonnement jederzeit widerrufen.";
@@ -284,10 +368,16 @@
 "Send Feedback" = "Feedback abgeben";
 
 /* No comment provided by engineer. */
-"Settings" = "Einstellungen";
+"Send To" = "Send To";
 
 /* No comment provided by engineer. */
 "settings" = "Einstellungen";
+
+/* No comment provided by engineer. */
+"Settings" = "Einstellungen";
+
+/* No comment provided by engineer. */
+"SGHTTPOperation Error" = "SGHTTPOperation Error";
 
 /* No comment provided by engineer. */
 "Shareables" = "Shareables";
@@ -314,22 +404,25 @@
 "Signing In To Dropbox" = "Bei Dropbox anmelden";
 
 /* No comment provided by engineer. */
+"Signing In To Evernote..." = "Signing In To Evernote...";
+
+/* No comment provided by engineer. */
+"Signing In To Tumblr..." = "Signing In To Tumblr...";
+
+/* No comment provided by engineer. */
+"Signing In To Wordpress..." = "Signing In To Wordpress...";
+
+/* No comment provided by engineer. */
 "Signup Failed" = "Anmeldung fehlgeschlagen";
 
 /* No comment provided by engineer. */
-"Sort By" = "Sort By";
-
-/* No comment provided by engineer. */
-"Style" = "Format";
+"Sort By" = "Sortieren";
 
 /* No comment provided by engineer. */
 "Support" = "Unterstützung";
 
 /* No comment provided by engineer. */
 "Tap here to signup for Dropbox" = "Tippen Sie hier, um sich bei Dropbox anzumelden";
-
-/* No comment provided by engineer. */
-"Text Background" = "Hintergrundfarbe";
 
 /* No comment provided by engineer. */
 "Text Color" = "Schriftfarbe";
@@ -344,7 +437,22 @@
 "Thanks" = "Danke";
 
 /* No comment provided by engineer. */
+"The content is invalid." = "The content is invalid.";
+
+/* No comment provided by engineer. */
 "The scratchpad is a great place to jot down quick ideas, store paragraphs you want to get out of the way, or just make a note for yourself later on." = "Im Notizblock können Sie einfach Ihre Ideen ablegen, Textblöcke zur Seite legen oder einfach nur einen Text eingeben, damit Sie ihn nicht vergessen.";
+
+/* No comment provided by engineer. */
+"Too many notes." = "Too many notes.";
+
+/* No comment provided by engineer. */
+"Tumblr" = "Tumblr";
+
+/* No comment provided by engineer. */
+"Tumblr Error" = "Tumblr Error";
+
+/* No comment provided by engineer. */
+"Tumblr Sign In" = "Tumblr Sign In";
 
 /* No comment provided by engineer. */
 "Twitter" = "Twitter";
@@ -356,10 +464,22 @@
 "Untitled" = "Ohne Titel";
 
 /* No comment provided by engineer. */
-"Untitled %ld.%@" = "Untitled %ld.%@";
+"Untitled %ld.%@" = "Ohne Titel %ld.%@";
 
 /* No comment provided by engineer. */
-"View" = "View";
+"URL" = "URL";
+
+/* No comment provided by engineer. */
+"Username" = "Username";
+
+/* No comment provided by engineer. */
+"View" = "Darstellung";
+
+/* No comment provided by engineer. */
+"We were unable to login to your Evernote account. Please check your username and password." = "We were unable to login to your Evernote account. Please check your username and password.";
+
+/* No comment provided by engineer. */
+"We were unable to login to your Tumblr account. Please check your username and password." = "We were unable to login to your Tumblr account. Please check your username and password.";
 
 /* No comment provided by engineer. */
 "Web" = "Web";
@@ -374,11 +494,13 @@
 "Word Count" = "Wörter";
 
 /* No comment provided by engineer. */
-"Words (%d)" = "Words (%d)";
+"Wordpress Sign In" = "Wordpress Sign In";
+
+/* No comment provided by engineer. */
+"Words (%d)" = "Wörter (%d)";
 
 /* No comment provided by engineer. */
 "Would you like to register your copy of Elements?  Registering allows us to tell you about important Elements bug fixes, new features and other cool stuff being worked on in the Second Gear garage." = "Möchten Sie Elements registrieren? Dadurch können wir Sie über die Entwicklungen bei Elements und anderen Produkten von Second Gear auf dem Laufenden halten.";
 
 /* No comment provided by engineer. */
 "Your device is not allowed to send mail" = "Mit diesem Gerät können keine Mails versendet werden";
-
