--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -8,10 +8,28 @@
 "About Elements" = "About Elements";
 
 /* No comment provided by engineer. */
+"Accounts" = "Accounts";
+
+/* No comment provided by engineer. */
+"Add Account" = "Add Account";
+
+/* No comment provided by engineer. */
+"Add Account..." = "Add Account...";
+
+/* No comment provided by engineer. */
 "add file" = "add file";
 
 /* No comment provided by engineer. */
 "add folder" = "add folder";
+
+/* No comment provided by engineer. */
+"An unknown error occurred" = "An unknown error occurred";
+
+/* No comment provided by engineer. */
+"appearance" = "appearance";
+
+/* No comment provided by engineer. */
+"Appearance" = "Appearance";
 
 /* No comment provided by engineer. */
 "Are you sure you want to clear your scratchpad?" = "Are you sure you want to clear your scratchpad?";
@@ -23,10 +41,10 @@
 "As Attachment" = "As Attachment";
 
 /* No comment provided by engineer. */
-"Authorization Failed" = "Authorization Failed";
+"As HTML Email" = "As HTML Email";
 
 /* No comment provided by engineer. */
-"Background Color" = "Background Color";
+"Authorization Failed" = "Authorization Failed";
 
 /* No comment provided by engineer. */
 "Can't Send Mail" = "Can't Send Mail";
@@ -56,10 +74,16 @@
 "Contact Us" = "Contact Us";
 
 /* No comment provided by engineer. */
+"Could not sign in to Tumblr. Please check your email and password." = "Could not sign in to Tumblr. Please check your email and password.";
+
+/* No comment provided by engineer. */
 "Couldn't Delete File" = "Couldn't Delete File";
 
 /* No comment provided by engineer. */
 "Create A Dropbox Account" = "Create A Dropbox Account";
+
+/* No comment provided by engineer. */
+"Creating /Elements folder" = "Creating /Elements folder";
 
 /* No comment provided by engineer. */
 "Creating Your Dropbox Account" = "Creating Your Dropbox Account";
@@ -83,10 +107,13 @@
 "Done" = "Done";
 
 /* No comment provided by engineer. */
+"Dropbox" = "Dropbox";
+
+/* No comment provided by engineer. */
 "Dropbox account" = "Dropbox account";
 
 /* No comment provided by engineer. */
-"Dropbox Login" = "Dropbox Login";
+"Dropbox Sync" = "Dropbox Sync";
 
 /* No comment provided by engineer. */
 "Edit" = "Edit";
@@ -128,6 +155,9 @@
 "Error Creating Local Folder" = "Error Creating Local Folder";
 
 /* No comment provided by engineer. */
+"Error Logging In" = "Error Logging In";
+
+/* No comment provided by engineer. */
 "Error Opening File" = "Error Opening File";
 
 /* No comment provided by engineer. */
@@ -135,6 +165,24 @@
 
 /* No comment provided by engineer. */
 "Error Saving Local Changes" = "Error Saving Local Changes";
+
+/* No comment provided by engineer. */
+"Evernote" = "Evernote";
+
+/* No comment provided by engineer. */
+"Evernote Sign In" = "Evernote Sign In";
+
+/* No comment provided by engineer. */
+"Export" = "Export";
+
+/* No comment provided by engineer. */
+"Exported to iTunes" = "Exported to iTunes";
+
+/* No comment provided by engineer. */
+"Exporting To Dropbox" = "Exporting To Dropbox";
+
+/* No comment provided by engineer. */
+"Exporting to Evernote..." = "Exporting to Evernote...";
 
 /* No comment provided by engineer. */
 "Facebook" = "Facebook";
@@ -167,7 +215,19 @@
 "How do you want to email this file?" = "How do you want to email this file?";
 
 /* No comment provided by engineer. */
+"HTML File" = "HTML File";
+
+/* No comment provided by engineer. */
+"http://example.com" = "http://example.com";
+
+/* No comment provided by engineer. */
 "Inline" = "Inline";
+
+/* No comment provided by engineer. */
+"Its notebook is not yours." = "Its notebook is not yours.";
+
+/* No comment provided by engineer. */
+"iTunes" = "iTunes";
 
 /* No comment provided by engineer. */
 "Last Modified" = "Last Modified";
@@ -191,7 +251,10 @@
 "Loading..." = "Loading...";
 
 /* No comment provided by engineer. */
-"Login" = "Login";
+"Login Failed" = "Login Failed";
+
+/* No comment provided by engineer. */
+"Login failed because of an error communicating with the Evernote servers.  Please try again later." = "Login failed because of an error communicating with the Evernote servers.  Please try again later.";
 
 /* No comment provided by engineer. */
 "Logout" = "Logout";
@@ -230,7 +293,13 @@
 "No Internet Connection Detected." = "No Internet Connection Detected.";
 
 /* No comment provided by engineer. */
+"Notebooks" = "Notebooks";
+
+/* No comment provided by engineer. */
 "OK" = "OK";
+
+/* No comment provided by engineer. */
+"Operation would exceed monthly upload allowance." = "Operation would exceed monthly upload allowance.";
 
 /* No comment provided by engineer. */
 "Our Other Apps" = "Our Other Apps";
@@ -239,7 +308,22 @@
 "Password" = "Password";
 
 /* No comment provided by engineer. */
+"PDF File" = "PDF File";
+
+/* No comment provided by engineer. */
+"Posting To Facebook..." = "Posting To Facebook...";
+
+/* No comment provided by engineer. */
+"Posting To Tumblr..." = "Posting To Tumblr...";
+
+/* No comment provided by engineer. */
 "Print" = "Print";
+
+/* No comment provided by engineer. */
+"Publish" = "Publish";
+
+/* No comment provided by engineer. */
+"Published!" = "Published!";
 
 /* No comment provided by engineer. */
 "Receive infrequent updates on Elements updates and other Second Gear apps. You can unsubscribe at anytime." = "Receive infrequent updates on Elements updates and other Second Gear apps. You can unsubscribe at anytime.";
@@ -284,10 +368,16 @@
 "Send Feedback" = "Send Feedback";
 
 /* No comment provided by engineer. */
-"Settings" = "Settings";
+"Send To" = "Send To";
 
 /* No comment provided by engineer. */
 "settings" = "settings";
+
+/* No comment provided by engineer. */
+"Settings" = "Settings";
+
+/* No comment provided by engineer. */
+"SGHTTPOperation Error" = "SGHTTPOperation Error";
 
 /* No comment provided by engineer. */
 "Shareables" = "Shareables";
@@ -314,22 +404,25 @@
 "Signing In To Dropbox" = "Signing In To Dropbox";
 
 /* No comment provided by engineer. */
+"Signing In To Evernote..." = "Signing In To Evernote...";
+
+/* No comment provided by engineer. */
+"Signing In To Tumblr..." = "Signing In To Tumblr...";
+
+/* No comment provided by engineer. */
+"Signing In To Wordpress..." = "Signing In To Wordpress...";
+
+/* No comment provided by engineer. */
 "Signup Failed" = "Signup Failed";
 
 /* No comment provided by engineer. */
 "Sort By" = "Sort By";
 
 /* No comment provided by engineer. */
-"Style" = "Style";
-
-/* No comment provided by engineer. */
 "Support" = "Support";
 
 /* No comment provided by engineer. */
 "Tap here to signup for Dropbox" = "Tap here to signup for Dropbox";
-
-/* No comment provided by engineer. */
-"Text Background" = "Text Background";
 
 /* No comment provided by engineer. */
 "Text Color" = "Text Color";
@@ -344,7 +437,22 @@
 "Thanks" = "Thanks";
 
 /* No comment provided by engineer. */
+"The content is invalid." = "The content is invalid.";
+
+/* No comment provided by engineer. */
 "The scratchpad is a great place to jot down quick ideas, store paragraphs you want to get out of the way, or just make a note for yourself later on." = "The scratchpad is a great place to jot down quick ideas, store paragraphs you want to get out of the way, or just make a note for yourself later on.";
+
+/* No comment provided by engineer. */
+"Too many notes." = "Too many notes.";
+
+/* No comment provided by engineer. */
+"Tumblr" = "Tumblr";
+
+/* No comment provided by engineer. */
+"Tumblr Error" = "Tumblr Error";
+
+/* No comment provided by engineer. */
+"Tumblr Sign In" = "Tumblr Sign In";
 
 /* No comment provided by engineer. */
 "Twitter" = "Twitter";
@@ -359,7 +467,19 @@
 "Untitled %ld.%@" = "Untitled %ld.%@";
 
 /* No comment provided by engineer. */
+"URL" = "URL";
+
+/* No comment provided by engineer. */
+"Username" = "Username";
+
+/* No comment provided by engineer. */
 "View" = "View";
+
+/* No comment provided by engineer. */
+"We were unable to login to your Evernote account. Please check your username and password." = "We were unable to login to your Evernote account. Please check your username and password.";
+
+/* No comment provided by engineer. */
+"We were unable to login to your Tumblr account. Please check your username and password." = "We were unable to login to your Tumblr account. Please check your username and password.";
 
 /* No comment provided by engineer. */
 "Web" = "Web";
@@ -372,6 +492,9 @@
 
 /* No comment provided by engineer. */
 "Word Count" = "Word Count";
+
+/* No comment provided by engineer. */
+"Wordpress Sign In" = "Wordpress Sign In";
 
 /* No comment provided by engineer. */
 "Words (%d)" = "Words (%d)";
